--- a/styles/main.css
+++ b/styles/main.css
@@ -145,7 +145,8 @@ text-align: center;
 
 /* Intro Home page */
 .intro{
-    padding:4% 8%
+    padding:4% 8%;
+    max-width:800px
 }
 
 .intro.home .wrapper .me{
