--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,4 @@
-$header-font: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$header-font: 'Montagu Slab', serif;
 $body-font: 'Raleway', sans-serif;
 
 $xs:20px;
