--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 @import url("https://d2ta2fpo91apla.cloudfront.net/fontawesome-free-5.9.0-web/css/all.min.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;600&display=swap');
 
 
 *,
@@ -58,12 +58,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $header-font;  
   font-weight: 700;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   }
 
 
 h1{
-  font-size:60px; 
+  font-size:50px; 
   @media(max-width:1140px){
   font-size: calc(16px + 2vw);
   }  
@@ -189,13 +189,16 @@ text-align: center;
     left: 0;
     -o-object-fit: cover; 
     object-fit: cover;
-    -o-object-position: 50% 50%; 
-    object-position: 50% 50%;
+    -o-object-position: 50% 0%; 
+    object-position: 50% 0%;
   } 
   @media (min-width:992px){
-    min-height:95vh;
+    min-height:100vh;
     height:100%;
-   }
+  }
+  // @media (min-width:1300px){
+  //   min-height:70vh;
+  // }
 } 
 
 figure {
@@ -230,50 +233,106 @@ svg {
 
 /*******************************/
 
-/* Intro all pages except home */
-.intro:not(.home){
-  padding:4% 8%;
-  max-width:800px
-}
 
 /* Intro Home */
 
 .intro{
   &.home{
-    text-align: center;
     min-height: calc(100vh - 100px);
     display: flex;
+    @media (min-height:1366px) and (max-height:1367px){
+      min-height:auto;
+    }
+
     .wrapper{
+      padding:20px;
       width: 100%;
-      .me{
-        max-width: 400px;
-        margin: 0 auto;
-        img{
-          width: 100%;
-          border-radius: 100%;
+      text-align: center;
+      max-width: 1300px;
+      margin: 0 auto;
+      .visual{
+        div{
+          position: relative;
+          .media-box{
+            min-height: 50vh;
+          }
+          .me{
+            img{
+              width: 100%;
+            }
+          }
+          .dev-logo{
+            max-width: 100px;
+            position: absolute;
+            left: -20px;
+            bottom: -20px;
+            z-index: 1;
+          }
+        }    
+
+      }
+      .content{
+        padding: 4%;
+        p{   
+          max-width: 700px; 
+          margin: 0 auto 20px;    
+          a span{
+            font-size:30px;
+            margin-left:10px;
+            font-weight:bold;        
+          }
+          a:hover span,
+          a:hover{
+            color:red
+          }
+        } 
+      }
+
+
+
+      @media (min-width:1024px){
+        display: flex;
+        text-align: left; 
+        align-items: center; 
+
+        .visual{
+          position: relative;
+          width:50vw;
+
+          div{
+            .dev-logo{max-width: 150px;}
+            .media-box{
+              min-height: 60vh;
+            }
+          }
+
         }
-        @media (min-width:769px){
-          max-width: 400px;
-          margin: 0 20px 0;
+        .content{
+          width: 50vw;
+          margin: 0 20px 20px;
+          p{
+            max-width: 750px;
+            margin:0 0 20px 0;
+          }
+        }
+      } 
+
+      @media (min-width:1200px){
+        .visual{
+          width:40vw;
+        }
+        .content{
+          width: 60vw;
         }
       }
-      p{
-        padding:20px;
-        a span{
-          font-size:30px;
-          margin-left:10px;
-          font-weight:bold;        
+      
+      @media (min-width:1600px){
+        .visual{
+          .media-box{
+            min-height: 55vh;
+          }
         }
-        a:hover span,
-        a:hover{
-          color:red
-        }
-      }      
-      @media (min-width:769px){
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-      }      
+      }
     }
   }
 }
