--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@import url("https://d2ta2fpo91apla.cloudfront.net/fontawesome-free-5.9.0-web/css/all.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;600&display=swap");
 *,
 *::before {
@@ -180,13 +179,19 @@ svg {
       min-height: 40vh; } }
 
 /*******************************/
+button.github {
+  display: flex;
+  margin-top: 30px;
+  padding: 10px 20px;
+  align-items: center;
+  border: none; }
+  button.github i {
+    margin-right: 10px; }
+
 /* Intro Home */
 .intro.home {
   min-height: calc(100vh - 100px);
   display: flex; }
-  @media (min-height: 1366px) and (max-height: 1367px) {
-    .intro.home {
-      min-height: auto; } }
   .intro.home .wrapper {
     padding: 20px;
     width: 100%;
@@ -243,5 +248,72 @@ svg {
     @media (min-width: 1600px) {
       .intro.home .wrapper .visual .media-box {
         min-height: 55vh; } }
+  @media (min-height: 1366px) and (max-height: 1367px) {
+    .intro.home {
+      min-height: auto; } }
+
+.portfolio {
+  padding-top: 8%; }
+  .portfolio .zoltash {
+    width: 96%;
+    margin: 0 auto;
+    padding: 4%;
+    background-color: #161d2b;
+    background-image: url("../img/bg-stars.svg");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: cover; }
+    .portfolio .zoltash .content {
+      padding: 2% 4% 4%;
+      text-align: center; }
+      .portfolio .zoltash .content p, .portfolio .zoltash .content h2 {
+        color: #fff; }
+      .portfolio .zoltash .content p {
+        max-width: 700px;
+        margin: 0 auto; }
+      .portfolio .zoltash .content button.github {
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #2531e3;
+        transition-property: all;
+        transition-duration: 0.3s;
+        transition-timing-function: ease-in; }
+        .portfolio .zoltash .content button.github i {
+          color: white; }
+        .portfolio .zoltash .content button.github:hover {
+          transition-property: all;
+          transition-duration: 0.3s;
+          transition-timing-function: ease-in;
+          background-color: #121a90; }
+    .portfolio .zoltash .visual figure {
+      position: relative;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .portfolio .zoltash .visual figure .hand {
+        max-width: 400px; }
+    @media (min-width: 1024px) {
+      .portfolio .zoltash {
+        display: flex;
+        align-items: center; }
+        .portfolio .zoltash .visual {
+          width: 50vw; }
+          .portfolio .zoltash .visual figure .hand {
+            max-width: unset; }
+        .portfolio .zoltash .content {
+          width: 50vw;
+          text-align: left;
+          padding: 4%; }
+          .portfolio .zoltash .content button.github {
+            margin-right: 0;
+            margin-left: 0; }
+          .portfolio .zoltash .content p {
+            margin: 0; } }
+    @media (min-width: 1200px) {
+      .portfolio .zoltash .content {
+        width: 60vw; }
+      .portfolio .zoltash .visual {
+        width: 40vw; } }
 
 /*# sourceMappingURL=styles.css.map */
