--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 @import 'mixins';
-@import url("https://d2ta2fpo91apla.cloudfront.net/fontawesome-free-5.9.0-web/css/all.min.css");
+
 @import url('https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;600&display=swap');
 
 
@@ -232,7 +232,14 @@ svg {
 }
 
 /*******************************/
-
+button.github{
+ display: flex;
+ margin-top: 30px;
+ padding:10px 20px;
+ align-items: center;
+ border: none;
+ i{margin-right: 10px;}
+}
 
 /* Intro Home */
 
@@ -240,9 +247,6 @@ svg {
   &.home{
     min-height: calc(100vh - 100px);
     display: flex;
-    @media (min-height:1366px) and (max-height:1367px){
-      min-height:auto;
-    }
 
     .wrapper{
       padding:20px;
@@ -250,6 +254,7 @@ svg {
       text-align: center;
       max-width: 1300px;
       margin: 0 auto;
+
       .visual{
         div{
           position: relative;
@@ -268,9 +273,9 @@ svg {
             bottom: -20px;
             z-index: 1;
           }
-        }    
-
+        }
       }
+
       .content{
         padding: 4%;
         p{   
@@ -287,9 +292,6 @@ svg {
           }
         } 
       }
-
-
-
       @media (min-width:1024px){
         display: flex;
         text-align: left; 
@@ -334,9 +336,99 @@ svg {
         }
       }
     }
+
+    @media (min-height:1366px) and (max-height:1367px){
+      min-height:auto;
+    }
   }
 }
 
+
+.portfolio{
+  padding-top: 8%;
+  .zoltash{
+    width: 96%;
+    margin: 0 auto;
+    padding: 4%;
+    background-color:#161d2b ;
+    @include bg-img(url("../img/bg-stars.svg"), left, cover);
+
+    .content{
+      padding:  2% 4% 4%;
+      text-align: center;
+      p, h2{
+        color: #fff;
+      }
+      p{
+        max-width: 700px;
+        margin: 0 auto;
+      }
+      button.github{
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #2531e3;
+        i{
+          color: white;
+        }
+        @include transition();
+        &:hover{
+          @include transition();
+          background-color: darken(#2531e3, 20%);
+        }
+      }
+    }
+
+    .visual{
+      figure{
+        position: relative;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .hand{
+          max-width: 400px;
+        }
+      }
+    }
+
+
+    @media (min-width:1024px){
+      display: flex;
+      align-items: center;
+      .visual{
+        width:50vw;
+        figure{
+          .hand{
+            max-width: unset;
+          }
+        }
+      }
+      .content{
+        width: 50vw;
+        text-align: left;
+        padding: 4%;
+        button.github{
+          margin-right: 0;
+          margin-left: 0;
+        }
+        p{
+          margin: 0;
+        }
+      }
+    }
+
+
+
+    @media (min-width:1200px){
+      .content{
+        width: 60vw;
+      }
+      .visual{
+        width: 40vw;
+      }
+    }
+  }
+}
 
 
   
