--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -36,9 +36,10 @@ a, p, li{
   font-size:16px; 
   position: relative;
   z-index: 1;
-  line-height:1.7em;
+  line-height:1.9em;
   font-size:18px;
   margin-bottom:0;
+  text-decoration: none;
 }
 a:hover{
   color:$dark;
@@ -72,7 +73,6 @@ h1{
 h2{
   color:$dark;
   font-size:30px;
-  font-weight:400;
   @media(max-width:992px){
     font-size: calc(16px + 2vw);
   }  
@@ -196,9 +196,7 @@ text-align: center;
     min-height:100vh;
     height:100%;
   }
-  // @media (min-width:1300px){
-  //   min-height:70vh;
-  // }
+
 } 
 
 figure {
@@ -234,11 +232,19 @@ svg {
 /*******************************/
 button.github{
  display: flex;
- margin-top: 30px;
+ margin: 30px auto 0;
  padding:10px 20px;
  align-items: center;
  border: none;
  i{margin-right: 10px;}
+ @include transition();
+ &:hover{
+   @include transition();
+ }
+ @media (min-width:1024px){
+  margin-right: auto;
+  margin-left: 0;
+ }
 }
 
 /* Intro Home */
@@ -345,39 +351,21 @@ button.github{
 
 
 .portfolio{
-  padding-top: 8%;
-  .zoltash{
+  padding: 8% 0;
+
+  .project{
     width: 96%;
     margin: 0 auto;
     padding: 4%;
-    background-color:#161d2b ;
-    @include bg-img(url("../img/bg-stars.svg"), left, cover);
-
     .content{
       padding:  2% 4% 4%;
       text-align: center;
-      p, h2{
-        color: #fff;
-      }
       p{
         max-width: 700px;
         margin: 0 auto;
       }
-      button.github{
-        margin-left: auto;
-        margin-right: auto;
-        background-color: #2531e3;
-        i{
-          color: white;
-        }
-        @include transition();
-        &:hover{
-          @include transition();
-          background-color: darken(#2531e3, 20%);
-        }
-      }
-    }
 
+    }
     .visual{
       figure{
         position: relative;
@@ -385,39 +373,28 @@ button.github{
         display: flex;
         flex-direction: column;
         align-items: center;
-        .hand{
+        .main-vis{
+          width: 100%;
           max-width: 400px;
         }
       }
     }
-
 
     @media (min-width:1024px){
       display: flex;
       align-items: center;
       .visual{
         width:50vw;
-        figure{
-          .hand{
-            max-width: unset;
-          }
-        }
       }
       .content{
         width: 50vw;
         text-align: left;
         padding: 4%;
-        button.github{
-          margin-right: 0;
-          margin-left: 0;
-        }
         p{
           margin: 0;
         }
       }
     }
-
-
 
     @media (min-width:1200px){
       .content{
@@ -426,6 +403,78 @@ button.github{
       .visual{
         width: 40vw;
       }
+    }
+  }
+
+  .project.zoltash{
+    background-color:#161d2b ;
+    @include bg-img(url("../img/bg-stars.svg"), left, cover);
+    .content{
+      p, h2{
+        color: #fff;
+      }
+      button.github{
+        background-color: #2531e3;
+        i{
+          color: white;
+        }
+        &:hover{
+          background-color: darken(#2531e3, 20%);
+        }
+      }
+    }
+
+    .visual{
+      figure{
+        .main-vis{
+          @media (min-width:1024px){
+            max-width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+.project.assets{
+  background-color: #59adbf;
+  @include bg-img(url("../img/fart-cloud.svg"), 0 100%, cover);
+  button.github{
+    background-color: #e54948;
+    i,p{color: #fff;}
+    &:hover{
+      background-color: darken(#e54948, 20%);
+    }
+  }
+}
+
+
+
+
+.project.buddy{
+  border: 1px solid #c2d7e8;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  button.github{
+    background-color: #c2d7e8;
+    &:hover{
+      background-color: darken(#c2d7e8, 20%);
+    }
+  }
+  .visual{
+    figure{
+      .main-vis{
+        @media (min-width:1024px){
+          max-width: 100%;
+        }
+      }
+    }
+  }
+  @media (min-width:1400px){
+    .content{
+      width: 50vw;
+    }
+    .visual{
+      width: 50vw;
     }
   }
 }
