--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -234,6 +234,7 @@ svg {
 }
 
 /*******************************/
+button.deployed,
 button.github{
  display: flex;
  margin: 30px auto 0;
@@ -396,7 +397,6 @@ button.github{
         max-width: 700px;
         margin: 0 auto;
       }
-
     }
     .visual{
       figure{
@@ -408,6 +408,16 @@ button.github{
         .main-vis{
           width: 100%;
           max-width: 400px;
+        }
+      }
+    }
+    @media (min-width:800px){
+      .content{
+        div div{
+          display: flex;
+          a:last-of-type{
+            margin-left:20px;
+          }
         }
       }
     }
@@ -452,6 +462,17 @@ button.github{
         }
         &:hover{
           background-color: darken(#2531e3, 20%);
+        }
+      }
+      button.deployed{
+        background-color: transparent;
+        border:2px solid #fff;
+        i{
+          color:#fff
+        }
+        &:hover{
+          background-color: #2531e3;
+          border:2px solid #2531e3;
         }
       }
     }
